# BeforeExam

./: .gitignore  CMakeLists.txt  README.md  main.c
Beispielklausur/: testexam.c  testexam.h
Exercise6/: exercise6.c  exercise6.h
Structs/: mainstruct.c  mainstruct.h
excercise2/: exercise2.c  exercise2.h
exercise3/: C-Standard.txt  Printer.c  Printer.h  exercise3.c  exercise3.h
exercise4/: exercise4.c  exercise4.h
exercise7/: exercise7.c  exercise7.h
exercise8/: exercise8.c  exercise8.h
