cmake_minimum_required(VERSION 3.17)
project(BeforeExam C)

set(CMAKE_C_STANDARD 99)

add_executable(BeforeExam main.c excercise2/exercise2.c excercise2/exercise2.h exercise3/exercise3.c exercise3/exercise3.h exercise4/exercise4.c exercise4/exercise4.h Structs/mainstruct.c Structs/mainstruct.h Beispielklausur/testexam.c Beispielklausur/testexam.h exercise6.c exercise6.h)