cmake_minimum_required(VERSION 3.17)
project(BeforeExam C)

set(CMAKE_C_STANDARD 99)

add_executable(BeforeExam main.c excercise2/exercise2.c excercise2/exercise2.h exercise3/exercise3.c exercise3/exercise3.h exercise4/exercise4.c exercise4/exercise4.h Structs/mainstruct.c Structs/mainstruct.h Beispielklausur/testexam.c Beispielklausur/testexam.h Exercise6/exercise6.c Exercise6/exercise6.h exercise7/exercise7.c exercise7/exercise7.h exercise8/exercise8.c exercise8/exercise8.h)